# selenium-uchiwa

./: README.md  setup.cfg  test-requirements.txt  tox.ini
selenium-uchiwa/: browser.py  uchiwa_test.py
tools/: clean-browser.sh  download-browser.sh  run_test.sh
