[metadata]
name = selenium-kibana
summary = selenium-kibana - selenium test case for kibana
description-file =
    README.md
author = selenium-kibana contributors
home-page = https://github.com/jbadiapa/selenium-kibana
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
